--- a/defense/Jensen_PhD_Defense.tex
+++ b/defense/Jensen_PhD_Defense.tex
@@ -1,4 +1,4 @@
-% Created 2024-02-12 Mon 16:18
+% Created 2024-02-14 Wed 13:38
 % Intended LaTeX compiler: xelatex
 \documentclass[presentation, aspectratio=1610]{beamer}
 \usepackage{graphicx}
@@ -39,7 +39,7 @@
  pdftitle={Methods for Autonomous Measurement of 3D Joint Kinematics from 2D Fluoroscopic Images},
  pdfkeywords={},
  pdfsubject={},
- pdfcreator={Emacs 29.1 (Org mode 9.7)}, 
+ pdfcreator={Emacs 29.2 (Org mode 9.7)}, 
  pdflang={English}}
 \begin{document}
 
@@ -48,10 +48,10 @@
 \tableofcontents
 \end{frame}
 
-\begin{frame}[label={sec:orgfb3d80d}]{Acknowledgments}
+\begin{frame}[label={sec:org9e76876}]{Acknowledgments}
 I would like to thank the McJunkin Family Charitable Foundation for their generous grant that supports this work.
 \end{frame}
-\begin{frame}[label={sec:orgc9329e6}]{The Problem}
+\begin{frame}[label={sec:org9ac33c4}]{The Problem}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -75,7 +75,7 @@ I would like to thank the McJunkin Family Charitable Foundation for their genero
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org6901fff}]{Our Proposition}
+\begin{frame}[label={sec:org25dba94}]{Our Proposition}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practical}} and \alert{\alert{inexpensive}} technology that allows them to \alert{\alert{measure}} a patient's knee kinematics during \alert{\alert{activities of daily living}}.
@@ -87,7 +87,7 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org2b9515d}]{Constraints}
+\begin{frame}[label={sec:org9503eea}]{Constraints}
 \begin{columns}
 \begin{column}{0.45\columnwidth}
 \begin{itemize}
@@ -104,13 +104,13 @@ Orthopaedic surgeons and clinicians would readily adopt a \alert{\alert{practica
 \end{columns}
 \end{frame}
 \section{Background}
-\label{sec:orgee98143}
-\begin{frame}[label={sec:org28ab63c}]{Background - Projective Geometry}
+\label{sec:org2262a80}
+\begin{frame}[label={sec:orge79ba77}]{Background - Projective Geometry}
 \begin{center}
 \includegraphics[width=0.8\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/perspective-projection.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org4891cf7}]{Background - Model-Image Registration}
+\begin{frame}[label={sec:org2ff9234}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -124,7 +124,7 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgcb316cf}]{Background - Model-Image Registration}
+\begin{frame}[label={sec:orgc3e0df4}]{Background - Model-Image Registration}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 If we know the projective parameters of the fluoroscopy machine, can we tinker with \(T^{cam}_{implant}\) so that our virtual projection matches the fluoroscopic image?
@@ -138,7 +138,7 @@ If we know the projective parameters of the fluoroscopy machine, can we tinker w
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org1e3e22f}]{Historical Overview}
+\begin{frame}[label={sec:org4448662}]{Historical Overview}
 Many different approaches have attempted to solve the model-image registration problem.
 \begin{itemize}
 \item Pre-computed projections
@@ -148,7 +148,7 @@ Many different approaches have attempted to solve the model-image registration p
 \item Roentgen Stereophotogrammetry
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org428bb38}]{Pre-Computed Projections}
+\begin{frame}[label={sec:orga114031}]{Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -171,7 +171,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org7abbf36}]{Limitations of Pre-Computed Projections}
+\begin{frame}[label={sec:orgf2926e7}]{Limitations of Pre-Computed Projections}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -196,7 +196,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5ed9fd8}]{Motion Capture (MoCap)}
+\begin{frame}[label={sec:orge48eec9}]{Motion Capture (MoCap)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -219,7 +219,7 @@ Many different approaches have attempted to solve the model-image registration p
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgb3df51b}]{Limitations of Motion Capture}
+\begin{frame}[label={sec:org0d6f04a}]{Limitations of Motion Capture}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 Skin Mounted
@@ -245,7 +245,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgb7c9b65}]{Biplane Imaging}
+\begin{frame}[label={sec:org3b91854}]{Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -269,7 +269,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org8182079}]{Limitations of Biplane Imaging}
+\begin{frame}[label={sec:org1a3fe08}]{Limitations of Biplane Imaging}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -290,7 +290,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org841ccb5}]{Iterative Projections}
+\begin{frame}[label={sec:org6bb6e57}]{Iterative Projections}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -315,7 +315,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc74c657}]{Limitations of (historic) Iterative Projection Methods}
+\begin{frame}[label={sec:org7de3f80}]{Limitations of (historic) Iterative Projection Methods}
 \begin{columns}
 \begin{column}{0.54\columnwidth}
 \begin{itemize}
@@ -342,7 +342,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgdced61c}]{Roentgen Stereophotogrammetry (RSA)}
+\begin{frame}[label={sec:org72a0dc8}]{Roentgen Stereophotogrammetry (RSA)}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -360,7 +360,7 @@ Bone Pins
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc01f6c1}]{Limitations of RSA}
+\begin{frame}[label={sec:org41f5b23}]{Limitations of RSA}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -379,8 +379,8 @@ Bone Pins
 \end{columns}
 \end{frame}
 \section{Aims}
-\label{sec:orgf4bafb1}
-\begin{frame}[label={sec:orga4b5cbc}]{Aims}
+\label{sec:org39f746e}
+\begin{frame}[label={sec:org5d2737a}]{Aims}
 \alert{Aim 1:} Joint Track Machine Learning: An Autonomous Method of Measuring Total Knee Arthroplasty Kinematics From Single-Plane X-Ray Images\footnote{Published in the Journal of Arthroplasty \autocite{jensenJointTrackMachine2023}}
 \vfill
 \alert{Aim 2:} Correcting Symmetric Implant Ambiguity in Measuring Total Knee Arthroplasty Kinematics from Single-Plane Fluoroscopy \footnote{In Revision for Publication in the Journal of Biomechanics}
@@ -390,11 +390,11 @@ Bone Pins
 \alert{Aim 4:} This will definitely work on shoulders, right?\footnote{In Review for Publication in the Journal of Computers in Biology and Medicine}
 \end{frame}
 \subsection{Aim 1 - Joint Track Machine Learning}
-\label{sec:orgf63a025}
-\begin{frame}[label={sec:org3725dd4}]{Goal}
+\label{sec:org8299059}
+\begin{frame}[label={sec:org87d97c8}]{Goal}
 Demonstrate the feasibility of a fully autonomous, model-image registration pipeline.
 \end{frame}
-\begin{frame}[label={sec:orgcb23f4e}]{Method}
+\begin{frame}[label={sec:org3513cd3}]{Method}
 \begin{itemize}
 \item Three-tiered approach
 \begin{itemize}
@@ -407,7 +407,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jtml-pipeline.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org0286d8e}]{Autonomous Implant Detection Using Convolutional Neural Networks}
+\begin{frame}[label={sec:orgf12229e}]{Autonomous Implant Detection Using Convolutional Neural Networks}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -425,7 +425,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgd8f77f5}]{Neural Network Data}
+\begin{frame}[label={sec:orgb0da27b}]{Neural Network Data}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -448,7 +448,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org3888151}]{Neural Network Robustness}
+\begin{frame}[label={sec:orgd99f2be}]{Neural Network Robustness}
 \begin{itemize}
 \item Additional augmentations introduced during training \autocite{buslaevAlbumentationsFastFlexible2020}.
 \end{itemize}
@@ -456,7 +456,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=.9\linewidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/augmentations.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgd67abd2}]{Normalized Fourier Descriptor Shape Libraries}
+\begin{frame}[label={sec:org6141ee9}]{Normalized Fourier Descriptor Shape Libraries}
 \begin{columns}
 \begin{column}{0.37\columnwidth}
 \begin{itemize}
@@ -474,7 +474,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5c6cfc5}]{Pose Refinement Using Global Optimization}
+\begin{frame}[label={sec:org07f0891}]{Pose Refinement Using Global Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -492,7 +492,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org3bdfcc0}]{Contour-based Objective Function}
+\begin{frame}[label={sec:org783b51b}]{Contour-based Objective Function}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -518,7 +518,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org2bc0465}]{Improving Robustness}
+\begin{frame}[label={sec:org8a0773c}]{Improving Robustness}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -533,7 +533,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc1f21ef}]{Optimization Routine}
+\begin{frame}[label={sec:org5047e6f}]{Optimization Routine}
 \begin{itemize}
 \item No analytic form of the objective function exists, it \alert{\alert{must}} be sampled at points of interest.
 \begin{itemize}
@@ -541,7 +541,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org46bf1c9}]{Lipschitzian Optimization}
+\begin{frame}[label={sec:orga5997f0}]{Lipschitzian Optimization}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -563,7 +563,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org737b442}]{Lipschitzian Optimization without the Lipschitz Constant}
+\begin{frame}[label={sec:org489eb92}]{Lipschitzian Optimization without the Lipschitz Constant}
 \begin{center}
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jones-direct-title.png}
 \end{center}
@@ -578,7 +578,7 @@ Demonstrate the feasibility of a fully autonomous, model-image registration pipe
 \includegraphics[width=2.5in]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/direct-1D.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgf1fa265}]{Trisecting Region}
+\begin{frame}[label={sec:org12e9404}]{Trisecting Region}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{equation*}
@@ -604,7 +604,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orga445005}]{Another Iteration}
+\begin{frame}[label={sec:org7bf8266}]{Another Iteration}
 \begin{columns}
 \begin{column}{0.4\columnwidth}
 \begin{equation*}
@@ -630,7 +630,7 @@ Where
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org9554b61}]{Determining Potentially Optimal Regions}
+\begin{frame}[label={sec:org51b0ee7}]{Determining Potentially Optimal Regions}
 \begin{itemize}
 \item Convex hull \autocites{grahamEfficientAlgorithDetermining1972}[][]{jarvisIdentificationConvexHull1973}[][]{chanOptimalOutputsensitiveConvex1996}[][]{barberQuickhullAlgorithmConvex1996} of region size vs. center value
 \end{itemize}
@@ -639,7 +639,7 @@ Where
 \includegraphics[width=0.6\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/direct-convex-hull.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org5aced7a}]{DiRECT for Joint Track Machine Learning}
+\begin{frame}[label={sec:orgf95978d}]{DiRECT for Joint Track Machine Learning}
 \begin{itemize}
 \item Search region is along all 6 degrees of freedom.
 \begin{itemize}
@@ -660,13 +660,13 @@ Stage & Budget [Iterations] & Search Range [mm,deg] & Dilation (pixels)\\
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org6d0b4c9}]{Testing Performance}
+\begin{frame}[label={sec:org6f0d1d3}]{Testing Performance}
 Now that we have our refined poses, how well does out system perform?
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/jtml-pipeline.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgd854cd4}]{Validation}
+\begin{frame}[label={sec:orgb52089a}]{Validation}
 \begin{itemize}
 \item Independent research group using Model-Based RSA.
 \item Determine the level of concordance between the two measurement systems
@@ -681,15 +681,15 @@ Now that we have our refined poses, how well does out system perform?
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/broberg-bland-altmann.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:orgbd86524}]{Awards}
+\begin{frame}[label={sec:org6349466}]{Awards}
 The work presented in this aim won the HAP Paul Award for Best Paper from the International Society for Technology in Arthroplasty's 2022 Annual Meeting.
 \begin{center}
 \includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/repo/lit-review/figures/raster/ista-hap-paul-talk.png}
 \end{center}
 \end{frame}
 \subsection{Aim 2 - Correcting Symmetric Implant Ambiguity}
-\label{sec:orgf84effa}
-\begin{frame}[label={sec:org8a7b37b}]{Goal}
+\label{sec:org9739017}
+\begin{frame}[label={sec:orgf5805fb}]{Goal}
 \begin{itemize}
 \item The goal of this aim is to validate and test methods that can overcome single-plane limitations for model-image registration.
 \begin{itemize}
@@ -698,7 +698,7 @@ The work presented in this aim won the HAP Paul Award for Best Paper from the In
 \end{itemize}
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org2017867}]{Translation}
+\begin{frame}[label={sec:orgeb44edd}]{Translation}
 \begin{itemize}
 \item Depth perception is lost when using a single camera.
 \item Utilize a virtual ``spring'' to constrain relative OOP translation between implant components.
@@ -713,7 +713,7 @@ Where
   ML \equiv \text{ Relative mediolateral translation }
 \end{equation*}
 \end{frame}
-\begin{frame}[label={sec:orgd882859}]{Symmetry Traps}
+\begin{frame}[label={sec:orge09b344}]{Symmetry Traps}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 With a symmetric tibial implant, the contour is not always a perfect heuristic for true pose.
@@ -727,7 +727,7 @@ Found ``ambiguous zone'' within \(3^{\circ}\) of pure lateral pose with high pro
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgc440d9c}]{Solving the Symmetric Pose}
+\begin{frame}[label={sec:org44c8255}]{Solving the Symmetric Pose}
 \begin{columns}
 \begin{column}{0.55\columnwidth}
 Algorithm devised to ``flip'' pose into symmetric counterpart.
@@ -745,7 +745,7 @@ Algorithm devised to ``flip'' pose into symmetric counterpart.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org602cc85}]{Methods - Training Set}
+\begin{frame}[label={sec:org1cbdc00}]{Methods - Training Set}
 \begin{columns}
 \begin{column}{0.5\columnwidth}
 \begin{itemize}
@@ -763,14 +763,14 @@ The input for each sample was \([\theta_{F/E}, \theta_{V/V}, \theta_{I/E}, \psi]
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org1a8f0de}]{Methods - Machine Learning}
+\begin{frame}[label={sec:org1a8af2c}]{Methods - Machine Learning}
 Using \texttt{scikit-learn}, the following classifiers were implemented:
 
 \begin{itemize}
 \item Support Vector Machine, K-Nearest-Neighbors, AdaBoost, Histogram Gradient Boosting, Bagging Estimator, Stacked Generalization, Majority Voting Classifier
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:orgc37af20},fragile]{Methods - Fixing ``Symmetry Traps''}
+\begin{frame}[label={sec:org7a6f44c},fragile]{Methods - Fixing ``Symmetry Traps''}
  For an input image sequence, the following is performed:
 
 \begin{enumerate}
@@ -783,12 +783,12 @@ Using \texttt{scikit-learn}, the following classifiers were implemented:
 \item For all images that are labeled ``ambiguous'', determine which of the two poses is closer to the spline, and take that as the ``correct'' pose.
 \end{enumerate}
 \end{frame}
-\begin{frame}[label={sec:org7a07cdd}]{Results - ML Classification}
+\begin{frame}[label={sec:org0e92922}]{Results - ML Classification}
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/sym-trap-ML-table.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org7483ac5}]{Results - Fixing ``Symmetry Traps''}
+\begin{frame}[label={sec:orgb401a1b}]{Results - Fixing ``Symmetry Traps''}
 \begin{itemize}
 \item Accuracy: 91.9\%
 \item Sensitivity: 0.674
@@ -801,23 +801,23 @@ The distribution of \(\psi\) for correct and incorrect frames was measured.
 \item Average \(\psi_{incorrect} = 7.12^{\circ}\).
 \end{itemize}
 \end{frame}
-\begin{frame}[label={sec:org6c9beeb}]{Results - Stratified \(\psi\) Correction Performance}
+\begin{frame}[label={sec:org1307aed}]{Results - Stratified \(\psi\) Correction Performance}
 \begin{center}
 \includegraphics[width=\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/stratified-psi-ML-table.png}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org9a5d0cc}]{Discussion}
+\begin{frame}[label={sec:org6a6cd19}]{Discussion}
 \begin{itemize}
 \item Reliable post-processing method to overcome pernicious issue (30 years in the making!)
 \item Suggests an imaging setup for measuring kinematics slightly off-oblique to escape ``ambiguous zone''
 \end{itemize}
 \end{frame}
 \subsection{Aim 3 - Musings on a ``Kinematics Translator'' and Synthetic Kinematics Data}
-\label{sec:org4259aaf}
+\label{sec:org15e62c2}
 \subsection{Aim 4 - This will definitely work on shoulders, right?}
-\label{sec:org2bec796}
+\label{sec:orgc7b8d19}
 
-\begin{frame}[label={sec:org22d4cd2}]{Spoiler Alert}
+\begin{frame}[label={sec:org050c458}]{Spoiler Alert}
 \begin{columns}
 \begin{column}{0.3\columnwidth}
 No, it won't.
@@ -833,10 +833,10 @@ No, it won't.
 \end{column}
 \end{columns}
 \end{frame}
-\begin{frame}[label={sec:org5155160}]{Goal}
+\begin{frame}[label={sec:org271cf16}]{Goal}
 Establish a protocol for exploring the relative sensitivity of input orientation to projected shape
 \end{frame}
-\begin{frame}[label={sec:orgcdfcc67}]{JTML on Shoulders}
+\begin{frame}[label={sec:org0ed54af}]{JTML on Shoulders}
 \begin{table}[h!]
 \small
 	\caption{Root mean squared differences between JointTrack Machine Learning optimized kinematics and manually registered kinematics on single-plane fluoroscopy} \label{tab:jtml-tsa-tka-vals}
@@ -849,18 +849,17 @@ Establish a protocol for exploring the relative sensitivity of input orientation
 	\end{tabularx}
 \end{table}
 \end{frame}
-\begin{frame}[label={sec:org13e3c5c}]{Modified Mean Surface Distance}
+\begin{frame}[label={sec:org61799f6}]{Modified Mean Surface Distance}
 \begin{itemize}
 \item In order to improve error gradient, a modified mean surface distance was incorporated into the cost function.
 \item The mean of the dot product between the projection estimate and a distance map of the CNN segmentation.
 \end{itemize}
-
 \begin{equation}
   \label{eq:DMCF}
-  J = \dfrac{ \sum_{(x,y) \in \text{Image}} Proj_{x,y}DM_{x,y} }{\sum_{(x,y)\in \text{Image}}Proj_{x,y}} = \dfrac{Proj \cdot DM}{\sum_{(x,y)\in \text{Image}}Proj_{x,y}}
+  J = \dfrac{Proj \cdot DM}{\sum Proj}
 \end{equation}
 \end{frame}
-\begin{frame}[label={sec:orga3bf850}]{Modified Asymmetric Keypoint Distance}
+\begin{frame}[label={sec:org41dcc69}]{Modified Asymmetric Keypoint Distance}
 \begin{itemize}
 \item Early psychological research deemed curvature as highly salient for object recognition \autocites{attneaveInformationalAspectsVisual1954}[][]{attneaveQuantitativeStudyShape1956}. This aimed to place additional emphasis on autonomously selected high-curvature regions.
 \begin{itemize}
@@ -879,11 +878,53 @@ Establish a protocol for exploring the relative sensitivity of input orientation
   \end{split}
 \end{equation}
 \end{frame}
-\begin{frame}[label={sec:orgf74f93a}]{2-Dimensional Shape}
+\begin{frame}[label={sec:org3faff67}]{2-Dimensional Shape}
 \end{frame}
-\begin{frame}[label={sec:org79271c7}]{Invariant Angular Radial Transform Descriptor}
+\begin{frame}[label={sec:org7fea3aa}]{Invariant Angular Radial Transform Descriptor}
+The Invariant Angular Radial Transform provides an orthogonal spatial basis function to describe binary images.
+
+\begin{figure}[htbp]
+\centering
+\includegraphics[width=0.7\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/ART_basis.png}
+\caption{The basis ``vectors'' for the invariant angular radial transform. From \autocite{leeNewShapeDescription2012}.}
+\end{figure}
 \end{frame}
-\begin{frame}[label={sec:orgb9ca374}]{Methods - Shape Difference}
+\begin{frame}[label={sec:org9e15a51}]{IARTD Feature Vector}
+The complez feature vector for IARTD is constructed to ensure orthogonality and rotational invariance for the magnitude. Prior to calculation, the image coordinates are normalized such that \((0,0)\) is at the center, and each of the four corners are \((\pm 1, \pm 1)\).
+\begin{equation}
+  F_{np} = \int_{0}^{2\pi}\int_{0}^{1} f(\rho,\theta)V_{np}(\rho,\theta)\rho d\rho d\theta
+\end{equation}
+
+
+\begin{equation}
+	\begin{split}
+		f(\rho,\theta) & \equiv \text{ Input image in polar coordinates}  \\
+		V_{np}(\rho,\theta)         & = \dfrac{1}{2\pi}e^{jp\theta}R_{n}(\rho)      \\
+		R_{n}(\rho)    & =
+		\begin{cases}
+			1                   & n=0     \\
+			2 \cos (\pi n \rho) & n \ne 0
+		\end{cases}
+	\end{split}
+\end{equation}
+\end{frame}
+\begin{frame}[label={sec:org864d1d0}]{Normalizing IARTD Feature Vector}
+We normalize the phase of the feature vector to ensure full rotational invariance.
+\begin{equation}
+  \begin{split}
+    \phi'_{np} &= \phi_{np}-\phi_{n,1} \\
+    F'_{np} &= F_{np}e^{-jp\phi_{n,1}}
+  \end{split}
+\end{equation}
+
+The final feature vector is the constructed with the corrected phase and magnitude values. Values of \(p<2\) are redundant and removed per the original authors' suggestion \autocite{leeNewShapeDescription2012}.
+\begin{equation}
+  IARTD = \{|F'_{np}|,\phi'_{np}\} \text{ where } n\ge0,p\ge2
+\end{equation}
+\end{frame}
+\begin{frame}[label={sec:orge763da3}]{Methods - Shape Difference}
+\begin{columns}
+\begin{column}{0.5\columnwidth}
 The ``input shapes'' for each implant were the projected implants at \(\pm 30^{\circ}\) along each rotational axis at \(5^{\circ}\) increments.
 \(1^{\circ}\) perturbations were applied along each rotation axis.
 
@@ -895,8 +936,15 @@ The ``input shapes'' for each implant were the projected implants at \(\pm 30^{\
 		\forall                          & \delta \in \{\delta_{x},\delta_{y},\delta_{z}\}
 	\end{split}
 \end{equation}
+\end{column}
+\begin{column}{0.5\columnwidth}
+\begin{center}
+\includegraphics[width=0.75\textwidth]{/home/ajensen123@ad.ufl.edu/figures/raster/rTSA_humeral_rotation_axes.png}
+\end{center}
+\end{column}
+\end{columns}
 \end{frame}
-\begin{frame}[label={sec:orgb5d470f}]{Methods - Shape Sensitivity}
+\begin{frame}[label={sec:org00305d4}]{Methods - Shape Sensitivity}
 The \(\Delta S(\delta)_{z,x,y}\) vector is normalized to account for overall scale of each element, in-plane rotation inputs are averaged, and the 2-norm of the difference vector is defined as the shape sensitivity.
 
 A larger vector would indicate that the shape changed more for that particular ``input shape'' and perturbation.
@@ -906,19 +954,84 @@ A larger vector would indicate that the shape changed more for that particular `
 	\mathbb{S}(\delta)_{x,y} = \dfrac{\sum_{z} \| S(\delta)_{z,x,y} \|_{2}}{N}
 \end{equation}
 \end{frame}
-\begin{frame}[label={sec:org7d0b983},fragile, allowframebreaks, label=]{Presentations}
+\begin{frame}[label={sec:org6710cde}]{Results - Humeral Shape Sensitivity}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Humeral_dx_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Humeral_dy_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Humeral_dz_sensitivity.png}
+	\caption{The $\mathbb{S}$ plot for a humeral implant for $\delta$ rotations along the x, y, and z axis, respectively.}
+	\label{fig:hum_sensitivity_plot}
+\end{figure}
+\end{frame}
+\begin{frame}[label={sec:orgfc5f5f4}]{Results - Glenosphere Shape Sensitivity}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Glenosphere_dx_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Glenosphere_dy_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Glenosphere_dz_sensitivity.png}
+	\caption{The $\mathbb{S}$ plot for a glenosphere implant for $\delta$ rotations along the x, y, and z axis, respectively.}
+	\label{fig:sca_sensitivity_plot}
+\end{figure}
+\end{frame}
+\begin{frame}[label={sec:org8f37a3b}]{Results - Femoral Shape Sensitivity}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Femoral_dx_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Femoral_dy_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Femoral_dz_sensitivity.png}
+	\caption{The $\mathbb{S}$ plot for a femoral implant for $\delta$ rotations along the x, y, and z axis, respectively.}
+	\label{fig:fem_sensitivity_plot}
+\end{figure}
+\end{frame}
+\begin{frame}[label={sec:orgbe75d57}]{Results - Tibial Shape Sensitivity}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Tibial_dx_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Tibial_dy_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Tibial_dz_sensitivity.png}
+	\caption{The $\mathbb{S}$ plot for a tibial implant for $\delta$ rotations along the x, y, and z axis, respectively.}
+	\label{fig:tib_sensitivity_plot}
+\end{figure}
+\end{frame}
+\begin{frame}[label={sec:org97cb7b4}]{Key Takeaways}
+\begin{itemize}
+\item Humeral implant has the lowest \(\delta_y\) sensitivity of all implants, which is the difficult registration axis.
+\item Tibial and glenosphere implants demonstrate a ``valley'' along rotation axis representing near-symmetry.
+\begin{itemize}
+\item For tibial implants, this is the axis most commonly associated with ``symmetry traps''.
+\end{itemize}
+\end{itemize}
+\begin{figure}[h!]
+	\centering
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Glenosphere_dy_sensitivity.png}
+	\includegraphics[width=0.3\linewidth]{~/figures/raster/Tibial_dy_sensitivity.png}
+    \caption{Glenosphere (left) and tibial (right) $\delta_y$ shape sensitivities.}
+\end{figure}
+\end{frame}
+\section{Conclusion}
+\label{sec:org0282a99}
+\begin{frame}[label={sec:org8fb5e6f}]{Conclusions}
+Throughout the past four years, I have:
+\begin{enumerate}
+\item Established a fully autonomous method of measuring TKA kinematics from single plane fluoroscopy. This software is used globally by different research groups, and offers
+\item Utilized machine learning to address ``symmetry traps'', an inherent limitation in single-plane TKA kinematics measurements for nearly 30 years. Additionally, we offer an alternative imaging protocol for accurately measuring TKA kinematics in a clinical setting.
+\item Developed a pipeline for accessing the relative performance of autonomous registration for different implants, conclusively finding that implant geometry alone is not sufficient for every joint.
+\end{enumerate}
+\end{frame}
+\begin{frame}[label={sec:orgb61f1c6},fragile, allowframebreaks, label=]{Presentations}
 \begin{refsection}
   \input{nocites-pres}
   \printbibliography[title=Presentations]
 \end{refsection}
 \end{frame}
-\begin{frame}[label={sec:org7fa6718},fragile, allowframebreaks, label=]{Publications}
+\begin{frame}[label={sec:org50f74e6},fragile, allowframebreaks, label=]{Publications}
 \begin{refsection}
   \input{nocites-pubs}
   \printbibliography[title=Publications]
 \end{refsection}
 \end{frame}
-\begin{frame}[label={sec:org24fba16}]{Timeline}
+\begin{frame}[label={sec:org1c1f4e8}]{Timeline}
 \begin{center}
 \begin{tabular}{ll}
 Date(s) & Event\\
@@ -937,12 +1050,12 @@ February 2024 & Implant Shape Sensitivity Paper Submitted\\
 \end{tabular}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org5669660}]{Thank you!}
+\begin{frame}[label={sec:org5f2be39}]{Thank you!}
 Thanks for listening!!
 \end{frame}
 \section{References}
-\label{sec:orgd4b2600}
-\begin{frame}[label={sec:org6b42451},fragile, allowframebreaks,  label=]{References}
+\label{sec:org1e18e5b}
+\begin{frame}[label={sec:org1648d81},fragile, allowframebreaks,  label=]{References}
 \printbibliography
 \end{frame}
 \end{document}
